[package]
name = "piss-os"
version = "0.1.0"

[workspace]
members = ["kernel"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
bootloader = "0.11.0-beta.1"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"
