[package]
name = "pess-os"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>", "Henry Moore <henrydmoore23@gmail.com>"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]